# pysecscan

./: .gitignore  .pre-commit-hooks.yaml  LICENSE  README.md  action.yml  pyproject.toml
.github/workflows/: test.yml
src/pysecscan/: cli.py  detectors.py  entropy.py  history.py  walker.py
tests/: test_cli.py  test_detectors.py  test_entropy.py  test_history.py  test_walker.py
