[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pysecscan"
version = "0.1.0"
description = "A CLI tool to scan repositories for accidentally committed secrets"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "pathspec>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "coverage",
    "ruff",
]

[project.scripts]
pysecscan = "pysecscan.cli:main"

[tool.ruff]
line-length = 88
